src/sql/sql_parser.output
Terminals unused in grammar

    DEALLOCATE
    PARAMETERS
    INTERSECT
    TEMPORARY
    TIMESTAMP
    NVARCHAR
    RESTRICT
    ANALYZE
    CASCADE
    COLUMNS
    CONTROL
    EXECUTE
    EXPLAIN
    NATURAL
    PREPARE
    SCHEMAS
    CHARACTER_VARYING
    DECIMAL
    SPATIAL
    VIRTUAL
    DESCRIBE
    BEFORE
    COLUMN
    DIRECT
    ESCAPE
    EXCEPT
    EXTRACT
    CAST
    FORMAT
    GLOBAL
    IMPORT
    ISNULL
    OFFSET
    RENAME
    SORTED
    UNLOAD
    AFTER
    ALTER
    DELTA
    LOCAL
    MERGE
    MINUS
    OVER
    UNION
    USING
    CALL
    CASE
    COPY
    DATE
    DATETIME
    ELSE
    FILE
    HASH
    HINT
    JOIN
    LOAD
    PARTITION
    PLAN
    TEXT
    THEN
    TIME
    VIEW
    WHEN
    WITH
    ADD
    ALL
    END
    OFF
    TOP
    OF
    TO
    NO
    ARRAY
    CONCAT
    ILIKE
    SECOND
    MINUTE
    HOUR
    DAY
    MONTH
    YEAR
    SECONDS
    MINUTES
    HOURS
    DAYS
    MONTHS
    YEARS
    INTERVAL
    NOWAIT
    SKIP
    LOCKED
    RANGE
    ROWS
    GROUPS
    UNBOUNDED
    FOLLOWING
    PRECEDING
    CURRENT_ROW
    '%'
    '^'
    UMINUS
    '['
    ']'


Grammar

    0 $accept: input $end

    1 input: statement_list opt_semicolon

    2 statement_list: expr_statement
    3               | statement_list ';' expr_statement

    4 expr_statement: expr_create_db
    5               | expr_drop_db
    6               | expr_show_db
    7               | expr_use_db
    8               | expr_create_table
    9               | expr_drop_table
   10               | expr_show_tables
   11               | expr_trun_table
   12               | expr_select
   13               | expr_insert
   14               | expr_update
   15               | expr_delete
   16               | expr_transaction

   17 expr_create_db: CREATE DATABASE opt_not_exists IDENTIFIER
   18               | CREATE SCHEMA opt_not_exists IDENTIFIER

   19 expr_drop_db: DROP DATABASE opt_exists IDENTIFIER
   20             | DROP SCHEMA opt_exists IDENTIFIER

   21 expr_show_db: SHOW DATABASES

   22 expr_use_db: USE IDENTIFIER

   23 expr_create_table: CREATE TABLE opt_not_exists expr_table '(' expr_vct_create_table_item ')'

   24 expr_drop_table: DROP TABLE opt_exists expr_table

   25 expr_show_tables: SHOW TABLES FROM IDENTIFIER
   26                 | SHOW TABLES

   27 expr_trun_table: TRUNCATE TABLE expr_table

   28 expr_transaction: BEGIN
   29                 | START TRANSACTION
   30                 | ROLLBACK
   31                 | COMMIT

   32 expr_insert: INSERT INTO expr_table '(' expr_vct_insert_column ')' VALUES expr_vct_elem_row
   33            | INSERT INTO expr_table '(' expr_vct_insert_column ')' expr_select

   34 expr_delete: DELETE FROM expr_table opt_expr_where opt_expr_order_by opt_expr_limit

   35 expr_update: UPDATE expr_table SET expr_vct_update_column opt_expr_where opt_expr_order_by opt_expr_limit

   36 expr_select: SELECT opt_distinct expr_vct_select_column opt_expr_vct_table opt_expr_where opt_expr_on opt_expr_group_by opt_expr_order_by opt_expr_limit opt_lock_type

   37 expr_vct_select_column: expr_select_column
   38                       | expr_vct_select_column ',' expr_select_column

   39 expr_select_column: expr_elem col_alias

   40 col_alias: AS IDENTIFIER
   41          | ε

   42 expr_vct_insert_column: expr_insert_column
   43                       | expr_vct_insert_column ',' expr_insert_column

   44 expr_insert_column: IDENTIFIER

   45 expr_vct_update_column: expr_update_column
   46                       | expr_vct_update_column ',' expr_update_column

   47 expr_update_column: IDENTIFIER '=' expr_elem

   48 expr_table: IDENTIFIER
   49           | IDENTIFIER AS IDENTIFIER
   50           | IDENTIFIER '.' IDENTIFIER
   51           | IDENTIFIER '.' IDENTIFIER AS IDENTIFIER

   52 opt_not_exists: IF NOT EXISTS
   53               | ε

   54 opt_exists: IF EXISTS
   55           | ε

   56 opt_expr_vct_table: FROM expr_vct_table
   57                   | ε

   58 expr_vct_table: expr_table
   59               | opt_expr_vct_table join_type expr_table

   60 join_type: INNER
   61          | LEFT OUTER
   62          | LEFT
   63          | RIGHT OUTER
   64          | RIGHT
   65          | FULL OUTER
   66          | OUTER
   67          | FULL
   68          | CROSS
   69          | ','

   70 expr_vct_col_name: IDENTIFIER
   71                  | expr_vct_col_name ',' IDENTIFIER

   72 opt_semicolon: ';'
   73              | ε

   74 expr_vct_create_table_item: expr_create_table_item
   75                           | expr_vct_create_table_item ',' expr_create_table_item

   76 expr_create_table_item: IDENTIFIER expr_data_type col_nullable default_col_dv auto_increment index_type table_comment
   77                       | INDEX IDENTIFIER index_type '(' expr_vct_col_name ')'
   78                       | PRIMARY KEY '(' expr_vct_col_name ')'

   79 expr_data_type: BIGINT
   80               | BOOLEAN
   81               | CHAR '(' INTVAL ')'
   82               | DOUBLE
   83               | FLOAT
   84               | INT
   85               | INTEGER
   86               | LONG
   87               | REAL
   88               | SMALLINT
   89               | VARCHAR '(' INTVAL ')'

   90 col_nullable: NULL
   91             | NOT NULL
   92             | ε

   93 default_col_dv: DEFAULT const_dv
   94               | ε

   95 auto_increment: AUTO_INCREMENT
   96               | ε

   97 index_type: PRIMARY KEY
   98           | PRIMARY
   99           | UNIQUE KEY
  100           | UNIQUE
  101           | KEY
  102           | ε

  103 table_comment: COMMENT STRING
  104              | ε

  105 expr_vct_elem_row: '(' expr_elem_row ')'
  106                  | expr_vct_elem_row ',' '(' expr_elem_row ')'

  107 expr_elem_row: expr_elem
  108              | expr_elem_row ',' expr_elem

  109 opt_expr_where: WHERE expr_logic
  110               | ε

  111 opt_expr_on: ON expr_logic
  112            | ε

  113 opt_expr_order_by: ORDER BY expr_vct_order_item
  114                  | ε

  115 expr_vct_order_item: expr_order_item
  116                    | expr_vct_order_item ',' expr_order_item

  117 expr_order_item: IDENTIFIER opt_order_direction

  118 opt_order_direction: ASC
  119                    | DESC
  120                    | ε

  121 opt_expr_limit: LIMIT INTVAL
  122               | LIMIT INTVAL ',' INTVAL
  123               | ε

  124 opt_expr_group_by: GROUP BY expr_vct_col_name opt_expr_having
  125                  | ε

  126 opt_expr_having: HAVING expr_logic
  127                | ε

  128 opt_distinct: DISTINCT
  129             | ε

  130 opt_lock_type: FOR SHARE
  131              | FOR UPDATE
  132              | ε

  133 expr_array: '(' expr_vct_const ')'

  134 expr_vct_const: const_dv
  135               | expr_vct_const ',' const_dv

  136 expr_elem: expr_logic
  137          | expr_data
  138          | expr_aggr

  139 expr_data: expr_const
  140          | expr_field
  141          | expr_param
  142          | expr_add
  143          | expr_sub
  144          | expr_mul
  145          | expr_div
  146          | expr_minus
  147          | expr_func
  148          | '(' expr_data ')'

  149 expr_const: const_dv

  150 expr_field: IDENTIFIER
  151           | IDENTIFIER '.' IDENTIFIER

  152 expr_param: '?'

  153 expr_add: expr_data '+' expr_data

  154 expr_sub: expr_data '-' expr_data

  155 expr_mul: expr_data '*' expr_data

  156 expr_div: expr_data '/' expr_data

  157 expr_minus: '-' expr_data

  158 expr_func: IDENTIFIER '(' opt_expr_vct_data ')'

  159 opt_expr_vct_data: expr_data
  160                  | opt_expr_vct_data ',' expr_data
  161                  | ε

  162 const_dv: const_int
  163         | const_double
  164         | const_string
  165         | const_bool
  166         | const_null

  167 const_string: STRING

  168 const_bool: TRUE
  169           | FALSE

  170 const_double: FLOATVAL

  171 const_int: INTVAL

  172 const_null: NULL

  173 expr_logic: expr_cmp
  174           | expr_in_not
  175           | expr_is_null_not
  176           | expr_between
  177           | expr_like
  178           | expr_not
  179           | expr_and
  180           | expr_or
  181           | '(' expr_logic ')'

  182 expr_cmp: expr_data comp_type expr_data

  183 comp_type: '='
  184          | '>'
  185          | '<'
  186          | GE
  187          | LE
  188          | NE
  189          | EQ

  190 expr_in_not: expr_data IN expr_array
  191            | expr_data NOT IN expr_array

  192 expr_is_null_not: expr_data IS NULL
  193                 | expr_data IS NOT NULL

  194 expr_between: expr_data BETWEEN expr_data AND expr_data

  195 expr_like: expr_data LIKE const_string
  196          | expr_data NOT LIKE const_string

  197 expr_not: NOT expr_logic

  198 expr_and: expr_logic AND expr_logic

  199 expr_or: expr_logic OR expr_logic

  200 expr_aggr: expr_count
  201          | expr_sum
  202          | expr_max
  203          | expr_min
  204          | expr_avg
  205          | '(' expr_aggr ')'

  206 expr_count: COUNT '(' expr_data ')'
  207           | COUNT '(' '*' ')'

  208 expr_sum: SUM '(' expr_data ')'

  209 expr_max: MAX '(' expr_data ')'

  210 expr_min: MIN '(' expr_data ')'

  211 expr_avg: AVERAGE '(' expr_data ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37)
    '(' (40) 23 32 33 77 78 81 89 105 106 133 148 158 181 205 206 207 208 209 210 211
    ')' (41) 23 32 33 77 78 81 89 105 106 133 148 158 181 205 206 207 208 209 210 211
    '*' (42) 155 207
    '+' (43) 153
    ',' (44) 38 43 46 69 71 75 106 108 116 122 135 160
    '-' (45) 154 157
    '.' (46) 50 51 151
    '/' (47) 156
    ';' (59) 3 72
    '<' (60) 185
    '=' (61) 47 183
    '>' (62) 184
    '?' (63) 152
    '[' (91)
    ']' (93)
    '^' (94)
    error (256)
    IDENTIFIER <sval> (258) 17 18 19 20 22 25 40 44 47 48 49 50 51 70 71 76 77 117 150 151 158
    STRING <sval> (259) 103 167
    FLOATVAL <fval> (260) 170
    INTVAL <ival> (261) 81 89 121 122 171
    DEALLOCATE (262)
    PARAMETERS (263)
    INTERSECT (264)
    TEMPORARY (265)
    TIMESTAMP (266)
    DISTINCT (267) 128
    NVARCHAR (268)
    RESTRICT (269)
    TRUNCATE (270) 27
    ANALYZE (271)
    BETWEEN (272) 194
    CASCADE (273)
    COLUMNS (274)
    CONTROL (275)
    DEFAULT (276) 93
    EXECUTE (277)
    EXPLAIN (278)
    INTEGER (279) 85
    NATURAL (280)
    PREPARE (281)
    PRIMARY (282) 78 97 98
    SCHEMAS (283)
    CHARACTER_VARYING (284)
    REAL (285) 87
    DECIMAL (286)
    SMALLINT (287) 88
    BIGINT (288) 79
    SPATIAL (289)
    VARCHAR (290) 89
    VIRTUAL (291)
    DESCRIBE (292)
    BEFORE (293)
    COLUMN (294)
    CREATE (295) 17 18 23
    DELETE (296) 34
    DIRECT (297)
    DOUBLE (298) 82
    ESCAPE (299)
    EXCEPT (300)
    EXISTS (301) 52 54
    EXTRACT (302)
    CAST (303)
    FORMAT (304)
    GLOBAL (305)
    HAVING (306) 126
    IMPORT (307)
    INSERT (308) 32 33
    ISNULL (309)
    OFFSET (310)
    RENAME (311)
    SCHEMA (312) 18 20
    SELECT (313) 36
    SORTED (314)
    TABLES (315) 25 26
    UNIQUE (316) 99 100
    UNLOAD (317)
    UPDATE (318) 35 131
    VALUES (319) 32
    AFTER (320)
    ALTER (321)
    CROSS (322) 68
    DELTA (323)
    FLOAT (324) 83
    GROUP (325) 124
    INDEX (326) 77
    INNER (327) 60
    LIMIT (328) 121 122
    LOCAL (329)
    MERGE (330)
    MINUS (331)
    ORDER (332) 113
    OVER (333)
    OUTER (334) 61 63 65 66
    RIGHT (335) 63 64
    TABLE (336) 23 24 27
    UNION (337)
    USING (338)
    WHERE (339) 109
    CALL (340)
    CASE (341)
    CHAR (342) 81
    COPY (343)
    DATE (344)
    DATETIME (345)
    DESC (346) 119
    DROP (347) 19 20 24
    ELSE (348)
    FILE (349)
    FROM (350) 25 34 56
    FULL (351) 65 67
    HASH (352)
    HINT (353)
    INTO (354) 32 33
    JOIN (355)
    LEFT (356) 61 62
    LIKE (357) 195 196
    LOAD (358)
    LONG (359) 86
    NULL (360) 90 91 172 192 193
    PARTITION (361)
    PLAN (362)
    SHOW (363) 21 25 26
    TEXT (364)
    THEN (365)
    TIME (366)
    VIEW (367)
    WHEN (368)
    WITH (369)
    ADD (370)
    ALL (371)
    AND (372) 194 198
    ASC (373) 118
    END (374)
    FOR (375) 130 131
    INT (376) 84
    KEY (377) 78 97 99 101
    NOT (378) 52 91 191 193 196 197
    OFF (379)
    SET (380) 35
    TOP (381)
    AS (382) 40 49 51
    BY (383) 113 124
    IF (384) 52 54
    IN (385) 190 191
    IS (386) 192 193
    OF (387)
    ON (388) 111
    OR (389) 199
    TO (390)
    NO (391)
    ARRAY (392)
    CONCAT (393)
    ILIKE (394)
    SECOND (395)
    MINUTE (396)
    HOUR (397)
    DAY (398)
    MONTH (399)
    YEAR (400)
    SECONDS (401)
    MINUTES (402)
    HOURS (403)
    DAYS (404)
    MONTHS (405)
    YEARS (406)
    INTERVAL (407)
    TRUE (408) 168
    FALSE (409) 169
    BOOLEAN (410) 80
    TRANSACTION (411) 29
    BEGIN (412) 28
    COMMIT (413) 31
    ROLLBACK (414) 30
    START (415) 29
    NOWAIT (416)
    SKIP (417)
    LOCKED (418)
    SHARE (419) 130
    RANGE (420)
    ROWS (421)
    GROUPS (422)
    UNBOUNDED (423)
    FOLLOWING (424)
    PRECEDING (425)
    CURRENT_ROW (426)
    DATABASE (427) 17 19
    DATABASES (428) 21
    AUTO_INCREMENT (429) 95
    COMMENT (430) 103
    AVERAGE (431) 211
    COUNT (432) 206 207
    MIN (433) 210
    MAX (434) 209
    SUM (435) 208
    USE (436) 22
    EQ (437) 189
    NE (438) 188
    LE (439) 187
    GE (440) 186
    UMINUS (441)


Nonterminals, with rules where they appear

    $accept (204)
        on left: 0
    input (205)
        on left: 1
        on right: 0
    statement_list <expr_vct_statement> (206)
        on left: 2 3
        on right: 1 3
    expr_statement <expr_statement> (207)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 2 3
    expr_create_db <expr_create_db> (208)
        on left: 17 18
        on right: 4
    expr_drop_db <expr_drop_db> (209)
        on left: 19 20
        on right: 5
    expr_show_db <expr_show_db> (210)
        on left: 21
        on right: 6
    expr_use_db <expr_use_db> (211)
        on left: 22
        on right: 7
    expr_create_table <expr_create_table> (212)
        on left: 23
        on right: 8
    expr_drop_table <expr_drop_table> (213)
        on left: 24
        on right: 9
    expr_show_tables <expr_show_tables> (214)
        on left: 25 26
        on right: 10
    expr_trun_table <expr_trun_table> (215)
        on left: 27
        on right: 11
    expr_transaction <expr_transaction> (216)
        on left: 28 29 30 31
        on right: 16
    expr_insert <expr_insert> (217)
        on left: 32 33
        on right: 13
    expr_delete <expr_delete> (218)
        on left: 34
        on right: 15
    expr_update <expr_update> (219)
        on left: 35
        on right: 14
    expr_select <expr_select> (220)
        on left: 36
        on right: 12 33
    expr_vct_select_column <expr_vct_column> (221)
        on left: 37 38
        on right: 36 38
    expr_select_column <expr_column> (222)
        on left: 39
        on right: 37 38
    col_alias <sval> (223)
        on left: 40 41
        on right: 39
    expr_vct_insert_column <expr_vct_column> (224)
        on left: 42 43
        on right: 32 33 43
    expr_insert_column <expr_column> (225)
        on left: 44
        on right: 42 43
    expr_vct_update_column <expr_vct_column> (226)
        on left: 45 46
        on right: 35 46
    expr_update_column <expr_column> (227)
        on left: 47
        on right: 45 46
    expr_table <expr_table> (228)
        on left: 48 49 50 51
        on right: 23 24 27 32 33 34 35 58 59
    opt_not_exists <bval> (229)
        on left: 52 53
        on right: 17 18 23
    opt_exists <bval> (230)
        on left: 54 55
        on right: 19 20 24
    opt_expr_vct_table <expr_vct_table> (231)
        on left: 56 57
        on right: 36 59
    expr_vct_table <expr_vct_table> (232)
        on left: 58 59
        on right: 56
    join_type <join_type> (233)
        on left: 60 61 62 63 64 65 66 67 68 69
        on right: 59
    expr_vct_col_name <expr_vct_str> (234)
        on left: 70 71
        on right: 71 77 78 124
    opt_semicolon (235)
        on left: 72 73
        on right: 1
    expr_vct_create_table_item <expr_vct_create_table_item> (236)
        on left: 74 75
        on right: 23 75
    expr_create_table_item <expr_create_table_item> (237)
        on left: 76 77 78
        on right: 74 75
    expr_data_type <expr_data_type> (238)
        on left: 79 80 81 82 83 84 85 86 87 88 89
        on right: 76
    col_nullable <bval> (239)
        on left: 90 91 92
        on right: 76
    default_col_dv <data_value> (240)
        on left: 93 94
        on right: 76
    auto_increment <bval> (241)
        on left: 95 96
        on right: 76
    index_type <index_type> (242)
        on left: 97 98 99 100 101 102
        on right: 76 77
    table_comment <sval> (243)
        on left: 103 104
        on right: 76
    expr_vct_elem_row <expr_vct_elem_row> (244)
        on left: 105 106
        on right: 32 106
    expr_elem_row <expr_elem_row> (245)
        on left: 107 108
        on right: 105 106 108
    opt_expr_where <expr_where> (246)
        on left: 109 110
        on right: 34 35 36
    opt_expr_on <expr_on> (247)
        on left: 111 112
        on right: 36
    opt_expr_order_by <expr_order_by> (248)
        on left: 113 114
        on right: 34 35 36
    expr_vct_order_item <expr_vct_order_item> (249)
        on left: 115 116
        on right: 113 116
    expr_order_item <expr_order_item> (250)
        on left: 117
        on right: 115 116
    opt_order_direction <bval> (251)
        on left: 118 119 120
        on right: 117
    opt_expr_limit <expr_limit> (252)
        on left: 121 122 123
        on right: 34 35 36
    opt_expr_group_by <expr_group_by> (253)
        on left: 124 125
        on right: 36
    opt_expr_having <expr_having> (254)
        on left: 126 127
        on right: 124
    opt_distinct <bval> (255)
        on left: 128 129
        on right: 36
    opt_lock_type <lock_type> (256)
        on left: 130 131 132
        on right: 36
    expr_array <expr_array> (257)
        on left: 133
        on right: 190 191
    expr_vct_const <expr_array> (258)
        on left: 134 135
        on right: 133 135
    expr_elem <expr_elem> (259)
        on left: 136 137 138
        on right: 39 47 107 108
    expr_data <expr_data> (260)
        on left: 139 140 141 142 143 144 145 146 147 148
        on right: 137 148 153 154 155 156 157 159 160 182 190 191 192 193 194 195 196 206 208 209 210 211
    expr_const <expr_data> (261)
        on left: 149
        on right: 139
    expr_field <expr_data> (262)
        on left: 150 151
        on right: 140
    expr_param <expr_data> (263)
        on left: 152
        on right: 141
    expr_add <expr_data> (264)
        on left: 153
        on right: 142
    expr_sub <expr_data> (265)
        on left: 154
        on right: 143
    expr_mul <expr_data> (266)
        on left: 155
        on right: 144
    expr_div <expr_data> (267)
        on left: 156
        on right: 145
    expr_minus <expr_data> (268)
        on left: 157
        on right: 146
    expr_func <expr_data> (269)
        on left: 158
        on right: 147
    opt_expr_vct_data <expr_vct_data> (270)
        on left: 159 160 161
        on right: 158 160
    const_dv <data_value> (271)
        on left: 162 163 164 165 166
        on right: 93 134 135 149
    const_string <data_value> (272)
        on left: 167
        on right: 164 195 196
    const_bool <data_value> (273)
        on left: 168 169
        on right: 165
    const_double <data_value> (274)
        on left: 170
        on right: 163
    const_int <data_value> (275)
        on left: 171
        on right: 162
    const_null <data_value> (276)
        on left: 172
        on right: 166
    expr_logic <expr_logic> (277)
        on left: 173 174 175 176 177 178 179 180 181
        on right: 109 111 126 136 181 197 198 199
    expr_cmp <expr_logic> (278)
        on left: 182
        on right: 173
    comp_type <comp_type> (279)
        on left: 183 184 185 186 187 188 189
        on right: 182
    expr_in_not <expr_logic> (280)
        on left: 190 191
        on right: 174
    expr_is_null_not <expr_logic> (281)
        on left: 192 193
        on right: 175
    expr_between <expr_logic> (282)
        on left: 194
        on right: 176
    expr_like <expr_logic> (283)
        on left: 195 196
        on right: 177
    expr_not <expr_logic> (284)
        on left: 197
        on right: 178
    expr_and <expr_and> (285)
        on left: 198
        on right: 179
    expr_or <expr_or> (286)
        on left: 199
        on right: 180
    expr_aggr <expr_aggr> (287)
        on left: 200 201 202 203 204 205
        on right: 138 205
    expr_count <expr_aggr> (288)
        on left: 206 207
        on right: 200
    expr_sum <expr_aggr> (289)
        on left: 208
        on right: 201
    expr_max <expr_aggr> (290)
        on left: 209
        on right: 202
    expr_min <expr_aggr> (291)
        on left: 210
        on right: 203
    expr_avg <expr_aggr> (292)
        on left: 211
        on right: 204


State 0

    0 $accept: • input $end

    TRUNCATE  shift, and go to state 1
    CREATE    shift, and go to state 2
    DELETE    shift, and go to state 3
    INSERT    shift, and go to state 4
    SELECT    shift, and go to state 5
    UPDATE    shift, and go to state 6
    DROP      shift, and go to state 7
    SHOW      shift, and go to state 8
    BEGIN     shift, and go to state 9
    COMMIT    shift, and go to state 10
    ROLLBACK  shift, and go to state 11
    START     shift, and go to state 12
    USE       shift, and go to state 13

    input              go to state 14
    statement_list     go to state 15
    expr_statement     go to state 16
    expr_create_db     go to state 17
    expr_drop_db       go to state 18
    expr_show_db       go to state 19
    expr_use_db        go to state 20
    expr_create_table  go to state 21
    expr_drop_table    go to state 22
    expr_show_tables   go to state 23
    expr_trun_table    go to state 24
    expr_transaction   go to state 25
    expr_insert        go to state 26
    expr_delete        go to state 27
    expr_update        go to state 28
    expr_select        go to state 29


State 1

   27 expr_trun_table: TRUNCATE • TABLE expr_table

    TABLE  shift, and go to state 30


State 2

   17 expr_create_db: CREATE • DATABASE opt_not_exists IDENTIFIER
   18               | CREATE • SCHEMA opt_not_exists IDENTIFIER
   23 expr_create_table: CREATE • TABLE opt_not_exists expr_table '(' expr_vct_create_table_item ')'

    SCHEMA    shift, and go to state 31
    TABLE     shift, and go to state 32
    DATABASE  shift, and go to state 33


State 3

   34 expr_delete: DELETE • FROM expr_table opt_expr_where opt_expr_order_by opt_expr_limit

    FROM  shift, and go to state 34


State 4

   32 expr_insert: INSERT • INTO expr_table '(' expr_vct_insert_column ')' VALUES expr_vct_elem_row
   33            | INSERT • INTO expr_table '(' expr_vct_insert_column ')' expr_select

    INTO  shift, and go to state 35


State 5

   36 expr_select: SELECT • opt_distinct expr_vct_select_column opt_expr_vct_table opt_expr_where opt_expr_on opt_expr_group_by opt_expr_order_by opt_expr_limit opt_lock_type

    DISTINCT  shift, and go to state 36

    $default  reduce using rule 129 (opt_distinct)

    opt_distinct  go to state 37


State 6

   35 expr_update: UPDATE • expr_table SET expr_vct_update_column opt_expr_where opt_expr_order_by opt_expr_limit

    IDENTIFIER  shift, and go to state 38

    expr_table  go to state 39


State 7

   19 expr_drop_db: DROP • DATABASE opt_exists IDENTIFIER
   20             | DROP • SCHEMA opt_exists IDENTIFIER
   24 expr_drop_table: DROP • TABLE opt_exists expr_table

    SCHEMA    shift, and go to state 40
    TABLE     shift, and go to state 41
    DATABASE  shift, and go to state 42


State 8

   21 expr_show_db: SHOW • DATABASES
   25 expr_show_tables: SHOW • TABLES FROM IDENTIFIER
   26                 | SHOW • TABLES

    TABLES     shift, and go to state 43
    DATABASES  shift, and go to state 44


State 9

   28 expr_transaction: BEGIN •

    $default  reduce using rule 28 (expr_transaction)


State 10

   31 expr_transaction: COMMIT •

    $default  reduce using rule 31 (expr_transaction)


State 11

   30 expr_transaction: ROLLBACK •

    $default  reduce using rule 30 (expr_transaction)


State 12

   29 expr_transaction: START • TRANSACTION

    TRANSACTION  shift, and go to state 45


State 13

   22 expr_use_db: USE • IDENTIFIER

    IDENTIFIER  shift, and go to state 46


State 14

    0 $accept: input • $end

    $end  shift, and go to state 47


State 15

    1 input: statement_list • opt_semicolon
    3 statement_list: statement_list • ';' expr_statement

    ';'  shift, and go to state 48

    $default  reduce using rule 73 (opt_semicolon)

    opt_semicolon  go to state 49


State 16

    2 statement_list: expr_statement •

    $default  reduce using rule 2 (statement_list)


State 17

    4 expr_statement: expr_create_db •

    $default  reduce using rule 4 (expr_statement)


State 18

    5 expr_statement: expr_drop_db •

    $default  reduce using rule 5 (expr_statement)


State 19

    6 expr_statement: expr_show_db •

    $default  reduce using rule 6 (expr_statement)


State 20

    7 expr_statement: expr_use_db •

    $default  reduce using rule 7 (expr_statement)


State 21

    8 expr_statement: expr_create_table •

    $default  reduce using rule 8 (expr_statement)


State 22

    9 expr_statement: expr_drop_table •

    $default  reduce using rule 9 (expr_statement)


State 23

   10 expr_statement: expr_show_tables •

    $default  reduce using rule 10 (expr_statement)


State 24

   11 expr_statement: expr_trun_table •

    $default  reduce using rule 11 (expr_statement)


State 25

   16 expr_statement: expr_transaction •

    $default  reduce using rule 16 (expr_statement)


State 26

   13 expr_statement: expr_insert •

    $default  reduce using rule 13 (expr_statement)


State 27

   15 expr_statement: expr_delete •

    $default  reduce using rule 15 (expr_statement)


State 28

   14 expr_statement: expr_update •

    $default  reduce using rule 14 (expr_statement)


State 29

   12 expr_statement: expr_select •

    $default  reduce using rule 12 (expr_statement)


State 30

   27 expr_trun_table: TRUNCATE TABLE • expr_table

    IDENTIFIER  shift, and go to state 38

    expr_table  go to state 50


State 31

   18 expr_create_db: CREATE SCHEMA • opt_not_exists IDENTIFIER

    IF  shift, and go to state 51

    $default  reduce using rule 53 (opt_not_exists)

    opt_not_exists  go to state 52


State 32

   23 expr_create_table: CREATE TABLE • opt_not_exists expr_table '(' expr_vct_create_table_item ')'

    IF  shift, and go to state 51

    $default  reduce using rule 53 (opt_not_exists)

    opt_not_exists  go to state 53


State 33

   17 expr_create_db: CREATE DATABASE • opt_not_exists IDENTIFIER

    IF  shift, and go to state 51

    $default  reduce using rule 53 (opt_not_exists)

    opt_not_exists  go to state 54


State 34

   34 expr_delete: DELETE FROM • expr_table opt_expr_where opt_expr_order_by opt_expr_limit

    IDENTIFIER  shift, and go to state 38

    expr_table  go to state 55


State 35

   32 expr_insert: INSERT INTO • expr_table '(' expr_vct_insert_column ')' VALUES expr_vct_elem_row
   33            | INSERT INTO • expr_table '(' expr_vct_insert_column ')' expr_select

    IDENTIFIER  shift, and go to state 38

    expr_table  go to state 56


State 36

  128 opt_distinct: DISTINCT •

    $default  reduce using rule 128 (opt_distinct)


State 37

   36 expr_select: SELECT opt_distinct • expr_vct_select_column opt_expr_vct_table opt_expr_where opt_expr_on opt_expr_group_by opt_expr_order_by opt_expr_limit opt_lock_type

    IDENTIFIER  shift, and go to state 57
    STRING      shift, and go to state 58
    FLOATVAL    shift, and go to state 59
    INTVAL      shift, and go to state 60
    NULL        shift, and go to state 61
    NOT         shift, and go to state 62
    TRUE        shift, and go to state 63
    FALSE       shift, and go to state 64
    AVERAGE     shift, and go to state 65
    COUNT       shift, and go to state 66
    MIN         shift, and go to state 67
    MAX         shift, and go to state 68
    SUM         shift, and go to state 69
    '-'         shift, and go to state 70
    '('         shift, and go to state 71
    '?'         shift, and go to state 72

    expr_vct_select_column  go to state 73
    expr_select_column      go to state 74
    expr_elem               go to state 75
    expr_data               go to state 76
    expr_const              go to state 77
    expr_field              go to state 78
    expr_param              go to state 79
    expr_add                go to state 80
    expr_sub                go to state 81
    expr_mul                go to state 82
    expr_div                go to state 83
    expr_minus              go to state 84
    expr_func               go to state 85
    const_dv                go to state 86
    const_string            go to state 87
    const_bool              go to state 88
    const_double            go to state 89
    const_int               go to state 90
    const_null              go to state 91
    expr_logic              go to state 92
    expr_cmp                go to state 93
    expr_in_not             go to state 94
    expr_is_null_not        go to state 95
    expr_between            go to state 96
    expr_like               go to state 97
    expr_not                go to state 98
    expr_and                go to state 99
    expr_or                 go to state 100
    expr_aggr               go to state 101
    expr_count              go to state 102
    expr_sum                go to state 103
    expr_max                go to state 104
    expr_min                go to state 105
    expr_avg                go to state 106


State 38

   48 expr_table: IDENTIFIER •
   49           | IDENTIFIER • AS IDENTIFIER
   50           | IDENTIFIER • '.' IDENTIFIER
   51           | IDENTIFIER • '.' IDENTIFIER AS IDENTIFIER

    AS   shift, and go to state 107
    '.'  shift, and go to state 108

    $default  reduce using rule 48 (expr_table)


State 39

   35 expr_update: UPDATE expr_table • SET expr_vct_update_column opt_expr_where opt_expr_order_by opt_expr_limit

    SET  shift, and go to state 109


State 40

   20 expr_drop_db: DROP SCHEMA • opt_exists IDENTIFIER

    IF  shift, and go to state 110

    $default  reduce using rule 55 (opt_exists)

    opt_exists  go to state 111


State 41

   24 expr_drop_table: DROP TABLE • opt_exists expr_table

    IF  shift, and go to state 110

    $default  reduce using rule 55 (opt_exists)

    opt_exists  go to state 112


State 42

   19 expr_drop_db: DROP DATABASE • opt_exists IDENTIFIER

    IF  shift, and go to state 110

    $default  reduce using rule 55 (opt_exists)

    opt_exists  go to state 113


State 43

   25 expr_show_tables: SHOW TABLES • FROM IDENTIFIER
   26                 | SHOW TABLES •

    FROM  shift, and go to state 114

    $default  reduce using rule 26 (expr_show_tables)


State 44

   21 expr_show_db: SHOW DATABASES •

    $default  reduce using rule 21 (expr_show_db)


State 45

   29 expr_transaction: START TRANSACTION •

    $default  reduce using rule 29 (expr_transaction)


State 46

   22 expr_use_db: USE IDENTIFIER •

    $default  reduce using rule 22 (expr_use_db)


State 47

    0 $accept: input $end •

    $default  accept


State 48

    3 statement_list: statement_list ';' • expr_statement
   72 opt_semicolon: ';' •

    TRUNCATE  shift, and go to state 1
    CREATE    shift, and go to state 2
    DELETE    shift, and go to state 3
    INSERT    shift, and go to state 4
    SELECT    shift, and go to state 5
    UPDATE    shift, and go to state 6
    DROP      shift, and go to state 7
    SHOW      shift, and go to state 8
    BEGIN     shift, and go to state 9
    COMMIT    shift, and go to state 10
    ROLLBACK  shift, and go to state 11
    START     shift, and go to state 12
    USE       shift, and go to state 13

    $default  reduce using rule 72 (opt_semicolon)

    expr_statement     go to state 115
    expr_create_db     go to state 17
    expr_drop_db       go to state 18
    expr_show_db       go to state 19
    expr_use_db        go to state 20
    expr_create_table  go to state 21
    expr_drop_table    go to state 22
    expr_show_tables   go to state 23
    expr_trun_table    go to state 24
    expr_transaction   go to state 25
    expr_insert        go to state 26
    expr_delete        go to state 27
    expr_update        go to state 28
    expr_select        go to state 29


State 49

    1 input: statement_list opt_semicolon •

    $default  reduce using rule 1 (input)


State 50

   27 expr_trun_table: TRUNCATE TABLE expr_table •

    $default  reduce using rule 27 (expr_trun_table)


State 51

   52 opt_not_exists: IF • NOT EXISTS

    NOT  shift, and go to state 116


State 52

   18 expr_create_db: CREATE SCHEMA opt_not_exists • IDENTIFIER

    IDENTIFIER  shift, and go to state 117


State 53

   23 expr_create_table: CREATE TABLE opt_not_exists • expr_table '(' expr_vct_create_table_item ')'

    IDENTIFIER  shift, and go to state 38

    expr_table  go to state 118


State 54
